--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,4 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558 
-    // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
         {
@@ -9,6 +7,7 @@
             "command": "/usr/bin/g++",
             "args": [
                 "-std=c++14",
+                "-lncurses",
                 "-g",
                 "${file}",
                 "-o",
